build/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: search
  labels:
    role: search-components
---

apiVersion: v1
kind: Namespace
metadata:
  name: dataplane
  labels:
    role: dataplane
