build/k8s/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-svc-headless
  namespace: search
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
    name: web
  selector:
    app: search-monolith
