build/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-svc
  namespace: search
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    name: web
  selector:
    app: search-monolith
