build/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-ingress
  namespace: search
spec:
  rules:
  - http:
      paths:
        - backend:
            service:
              name: search-svc
              port:
                number: 80
          path: /*
          pathType: ImplementationSpecific
